[tool.poetry]
name = "fin_app"
version = "0.1.0"
description = ""
authors = ["Ralph Santos Souza"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
FlaskRESTful = "^0.1.1"
PyMySQL = "^1.0.2"
sqlalchemy-pytest-fixtures = "sqlalchemy"
SQLAlchemy = "^1.3.23"
psycopg2 = "^2.8.6"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
